# grymbb

./: .gitignore  Cargo.toml
assets/: config.toml.ex
assets/locales/: pt.json
src/: config.rs  dump.rs  filters.rs  main.rs  utils.rs
src/modules/: games.rs  i18n.rs  mod.rs
src/plugins/: mod.rs
src/plugins/bot/: info.rs  mod.rs  purge.rs  screenshot.rs  start.rs  tic_tac_toe.rs
src/plugins/user/: dump.rs  eval.rs  info.rs  mod.rs  purge.rs  reverse_search.rs  screenshot.rs  sed.rs  tic_tac_toe.rs  upload.rs
