[package]
name = "grymbb"
version = "0.1.0"
authors = ["Andriel Ferreira <andrielfr@proton.me>"]
license = "MIT OR Apache-2.0"
description = """
A small telegram userbot written in Rust.
"""
homepage = "https://github.com/AndrielFR/grymbb"
repository = "https://github.com/AndrielFR/grymbb"
edition = "2021"

[dependencies]
# ferogram = { git = "https://github.com/AmanoTeam/ferogram" }
ferogram = { path = "../ferogram/lib/ferogram" }
grammers-client = { git = "https://github.com/Lonami/grammers", features = ["html", "serde"] }

log = "*"
rand = "*"
toml = "*"
uuid = { version = "1", features = ["v4"] }
bytes = "1"
regex = "1"
tokio = { version = "1", features = ["rt", "macros"] }
serde = { version = "1", features = ["derive"] }
chrono = "*"
maplit = "1"
reqwest = { version = "*", features = ["json", "multipart"] }
sysinfo = "*"
env_logger = "*"
serde_json = "1"
tokio-uring = "*"
